--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="sidebar">
-        <div id="button">
+        <div class="button-container">
             <button id="prev-week" class="nav-button">&lt;</button>
             <button id="next-week" class="nav-button">&gt;</button>
         </div>
