--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
             <button id="mobile-prev-week" class="nav-button">&lt;</button>
             <button id="mobile-next-week" class="nav-button">&gt;</button>
         </div>
+        <div class="calendar-header">
+            <h1 id="title2">Map</h1>
+        </div>
+        <div clas="test">
+            <img src="plan.jpg" alt="plan" class="plan">
+        </div>
     </div>
 
     <script src="scripts.js"></script>
